@@ -44,15 +44,15 @@ xsi:schemaLocation="http://gimp-print.sourceforge.net/xsd/gp.xsd-1.0 gutenprint.
   <NozzleSeparation>2</NozzleSeparation>
  </headConfiguration>
  <headConfiguration type="black">
-  <Nozzles>360</Nozzles>
+  <Nozzles>358</Nozzles>
   <MinNozzles>1</MinNozzles>
-  <FirstNozzle>0</FirstNozzle>
+  <FirstNozzle>1</FirstNozzle>
   <NozzleSeparation>1</NozzleSeparation>
  </headConfiguration>
  <headConfiguration type="fast">
-  <Nozzles>360</Nozzles>
+  <Nozzles>358</Nozzles>
   <MinNozzles>1</MinNozzles>
-  <FirstNozzle>0</FirstNozzle>
+  <FirstNozzle>1</FirstNozzle>
   <NozzleSeparation>1</NozzleSeparation>
  </headConfiguration>
  <physicalChannels>4</physicalChannels>
@@ -104,6 +104,17 @@ xsi:schemaLocation="http://gimp-print.sourceforge.net/xsd/gp.xsd-1.0 gutenprint.
    <parameter type="float" name="DropSize2">0.500000</parameter>
    <parameter type="float" name="DropSize3">1.000000</parameter>
   </resolution>
+  <resolution translate="text" name="360hq" text="360 DPI Enhanced">
+   <physicalResolution>360 360</physicalResolution>
+   <verticalPasses>2</verticalPasses>
+   <parameter type="float" name="escp2_density">2.000000</parameter>
+   <parameter type="integer" name="escp2_ink_type">17</parameter>
+   <parameter type="integer" name="escp2_base_res">360</parameter>
+   <parameter type="integer" name="escp2_bits">2</parameter>
+   <parameter type="float" name="DropSize1">0.250000</parameter>
+   <parameter type="float" name="DropSize2">0.500000</parameter>
+   <parameter type="float" name="DropSize3">1.000000</parameter>
+  </resolution>
   <resolution translate="text" name="720x360sw" text="720 x 360 DPI">
    <physicalResolution>720 360</physicalResolution>
    <parameter type="float" name="escp2_density">1.560000</parameter>
@@ -114,8 +125,30 @@ xsi:schemaLocation="http://gimp-print.sourceforge.net/xsd/gp.xsd-1.0 gutenprint.
    <parameter type="float" name="DropSize2">0.300000</parameter>
    <parameter type="float" name="DropSize3">1.000000</parameter>
   </resolution>
+  <resolution translate="text" name="720x360hq" text="720 x 360 DPI Enhanced">
+   <physicalResolution>720 360</physicalResolution>
+   <verticalPasses>2</verticalPasses>
+   <parameter type="float" name="escp2_density">1.560000</parameter>
+   <parameter type="integer" name="escp2_ink_type">18</parameter>
+   <parameter type="integer" name="escp2_base_res">360</parameter>
+   <parameter type="integer" name="escp2_bits">2</parameter>
+   <parameter type="float" name="DropSize1">0.120000</parameter>
+   <parameter type="float" name="DropSize2">0.300000</parameter>
+   <parameter type="float" name="DropSize3">1.000000</parameter>
+  </resolution>
   <resolution translate="text" name="720sw" text="720 DPI">
    <physicalResolution>720 720</physicalResolution>
+   <parameter type="float" name="escp2_density">0.780000</parameter>
+   <parameter type="integer" name="escp2_ink_type">18</parameter>
+   <parameter type="integer" name="escp2_base_res">360</parameter>
+   <parameter type="integer" name="escp2_bits">2</parameter>
+   <parameter type="float" name="DropSize1">0.120000</parameter>
+   <parameter type="float" name="DropSize2">0.300000</parameter>
+   <parameter type="float" name="DropSize3">1.000000</parameter>
+  </resolution>
+  <resolution translate="text" name="720hq" text="720 DPI High Quality">
+   <physicalResolution>720 720</physicalResolution>
+   <verticalPasses>2</verticalPasses>
    <parameter type="float" name="escp2_density">0.780000</parameter>
    <parameter type="integer" name="escp2_ink_type">18</parameter>
    <parameter type="integer" name="escp2_base_res">360</parameter>
